--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+# suppress inspection "UnusedProperty" for whole file
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/weather?useUnicode=true&serverTimezone=UTC
+spring.datasource.username=postgres
+spring.datasource.password=viewsonic1986@@
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+
+weather.url=https://api.weatherbit.io/v2.0/forecast/daily
+weather.apiKey=273c07c4d603455cabd9f94cb58b526c
+
+server.port=8082
