--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,10 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+		</dependency>
     </dependencies>
 	<build>
 		<plugins>
