Change  from spring.jpa.hibernate.ddl-auto=none To spring.jpa.hibernate.ddl-auto=create-drop
Create table by hibernate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/weather?useUnicode=true&s
 spring.datasource.username=postgres
 spring.datasource.password=viewsonic1986@@
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
